TAG20200506-01 : ES6 Veriable defination updated.

--- a/demo.html
+++ b/demo.html
@@ -37,10 +37,10 @@
         height: 180,
         colorDark: "#473C8B",
         colorLight: "#FFFACD",
-        // logo: "./assets/author.jpg", // LOGO
-        // logoWidth: "80",
-        // logoHeight: "80",
-        // logoBackgroundColor: "#00b9f5",
+        logo: "./assets/author.jpg", // LOGO
+        logoWidth: "80",
+        logoHeight: "80",
+        logoBackgroundColor: "#00b9f5",
         correctLevel: QRCode.CorrectLevel.H, // L, M, Q, H
         version: 5,
       };
